fixed alignment main__section again

--- a/src/components/PageUI/PageUI.css
+++ b/src/components/PageUI/PageUI.css
@@ -48,6 +48,7 @@
   margin-bottom: 5rem;
   margin-left: .25rem;
   display: flex;
+  min-width: 100%;
   align-items: center;
   justify-content: space-between;
 }
